--- a/index.html
+++ b/index.html
@@ -450,7 +450,11 @@
             <div class="contact-info" style="margin-top: 30px;">
                 <div class="contact-item">
                     <span>📍</span>
-                    <span>180 Fitness Fieldhouse</span>
+                    <a href="https://www.180fieldhouse.com/" target="_blank" style="color: #ffffff; text-decoration: underline; font-weight: 700;">180 Fitness Fieldhouse</a>
+                </div>
+                <div class="contact-item">
+                    <span>📞</span>
+                    <a href="tel:4355570678" style="color: #ffffff; text-decoration: underline; font-weight: 700;"> TEXT435-557-0678</a>
                 </div>
                 <div class="contact-item">
                     <span>📧</span>
