--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <div class="pricing-container">
                 <div class="pricing-tier">
                     <div class="tier-name">Standard Tier</div>
-                    <div class="tier-price">$179–$229</div>
+                    <div class="tier-price">$209</div>
                     <div class="tier-description">
                         <ul>
                             <li>Workouts + community</li>
@@ -388,7 +388,7 @@
                 
                 <div class="pricing-tier premium">
                     <div class="tier-name">Premium Tier</div>
-                    <div class="tier-price">$249–$299</div>
+                    <div class="tier-price">$299</div>
                     <div class="tier-description">
                         <ul>
                             <li>Everything in Standard</li>
@@ -454,7 +454,7 @@
                 </div>
                 <div class="contact-item">
                     <span>📞</span>
-                    <a href="tel:4355570678" style="color: #ffffff; text-decoration: underline; font-weight: 700;"> TEXT435-557-0678</a>
+                    <a href="tel:4355570678" style="color: #ffffff; text-decoration: underline; font-weight: 700;"> Text: 435-557-0678</a>
                 </div>
                 <div class="contact-item">
                     <span>📧</span>
