--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strong Mama Camp - Poster</title>
+    <title>Strong Momma Camp - Poster</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800;900&family=Open+Sans:wght@400;600;700&display=swap');
         
@@ -355,7 +355,7 @@
             <div style="font-size: 14px; color: #666666; margin-top: 5px; letter-spacing: 2px;">FITNESS ON YOUR TIME</div>
         </div>
         <div class="header">
-            <h1 class="title">💪 STRONG MAMA CAMP</h1>
+            <h1 class="title">💪 STRONG MOMMA CAMP</h1>
             <div class="subtitle">6 Weeks • 12 Sessions • Starts January</div>
             <div class="tagline">Because strong moms make strong families.</div>
             <div class="description">
@@ -368,7 +368,7 @@
             <div class="features-grid">
                 <div class="feature-item">12 expert-led small-group sessions (2x/week)</div>
                 <div class="feature-item">Total-body strength, stability & mobility training</div>
-                <div class="feature-item">Supportive "Strong Mama" community</div>
+                <div class="feature-item">Supportive "Strong Momma" community</div>
                 <div class="feature-item">Optional nutrition + accountability coaching</div>
             </div>
         </div>
@@ -443,7 +443,7 @@
         </div>
         
         <div class="cta-section">
-            <div class="cta-text">Join the movement. Be a Strong Mama.</div>
+            <div class="cta-text">Join the movement. Be a Strong Momma.</div>
             <div class="cta-subtext">💥 Spots are limited — sign up today!</div>
             <a href="registration.html" class="register-btn">Register Now</a>
             <div class="contact-info" style="margin-top: 30px;">
