--- a/registration.html
+++ b/registration.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strong Mama Camp - Registration</title>
+    <title>Strong Momma Camp - Registration</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800;900&family=Open+Sans:wght@400;600;700&display=swap');
         
@@ -217,7 +217,7 @@
         <div class="header">
             <div class="brand">180 FITNESS</div>
             <div class="brand-tagline">FITNESS ON YOUR TIME</div>
-            <h1 class="title">💪 STRONG MAMA CAMP</h1>
+            <h1 class="title">💪 STRONG MOMMA CAMP</h1>
             <div class="subtitle">Registration Form</div>
         </div>
         
